# inferno

./: .gitignore  CHANGES.md  TODO.md  flake.nix
client/: F.ml  F.mli  FPrinter.ml  FTypeChecker.ml  HandWrittenTest.ml  Infer.ml  ML.ml  Main.ml  RandomTest.ml  Test.ml  dune
client/test/: CheckML.ml  Log.ml  TestML.ml  TestMLRandom.ml  dune
src/: SolverHi.ml  SolverHi.mli  SolverLo.ml  SolverLo.mli  SolverSig.ml
